update frontend UI
